add homepage rendering tests for dashboarsd